initial page style

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
+
 <body>
     <nav>
         <ul>
@@ -18,23 +22,66 @@
     </nav>
 
     <section id="home">
-
+        <div>
+            <img src="images/baaboud.png" alt="">
+        </div>
+        <div class="intro">
+            <span>Abdullah Baaboud</span>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque porro asperiores debitis quos optio,
+                temporibus error illo nihil quia aspernatur eligendi repellendus, fugit quibusdam blanditiis odio
+                dolorum commodi dicta dolores.</p>
+        </div>
     </section>
 
     <section id="about">
-
+        <h2>About</h2>
+        <h3>Skills</h3>
+        <div class="skills">
+            <div>
+                <span>Front End</span>
+                <ul>
+                    <li>HTML 5  <progress value="50" max="100"></progress></li>
+                    <li>CSS <progress value="50" max="100"></progress></li>
+                    <li>Java Script <progress value="50" max="100"></progress></li>
+                    <li>Bootstrap  <progress value="50" max="100"></progress></li>
+                </ul>
+            </div>
+            <div>
+                <span>Front End</span>
+                <ul>
+                    <li>PHP  <progress value="50" max="100"></progress></li>
+                    <li>Database  <progress value="50" max="100"></progress></li>
+                </ul>
+            </div>
+        </div>
+        <h3>Experience</h3>
+        <ul>
+            <li></li>
+        </ul>
     </section>
 
     <section id="services">
-
+        <h2>Services</h2>
     </section>
 
     <section id="contact">
-        
+        </form>
+        <h2>Contact</h2>
+
+        <form action="">
+            <label for="email">Enter Your Email</label>
+            <input type="email" name="" id="email">
+            <br>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+        </form>
+
+
+        <p><a href="#">Facebook <i class="fab fa-facebook"></i></a></p>
     </section>
 
     <footer>
-
+        <p>Copyright ©2022 All rights reserved | This portfolio is made by Abdullah Baaboud</p>
     </footer>
 </body>
+
 </html>
