add some services section content

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
             <div>
                 <span>Front End</span>
                 <ul>
-                    <li>HTML 5  <progress value="50" max="100"></progress></li>
-                    <li>CSS <progress value="50" max="100"></progress></li>
-                    <li>Java Script <progress value="50" max="100"></progress></li>
-                    <li>Bootstrap  <progress value="50" max="100"></progress></li>
+                    <li>HTML 5  <progress value="80" max="100"></progress></li>
+                    <li>CSS <progress value="80" max="100"></progress></li>
+                    <li>Java Script <progress value="80" max="100"></progress></li>
+                    <li>Bootstrap  <progress value="80" max="100"></progress></li>
                 </ul>
             </div>
             <div>
                 <span>Front End</span>
                 <ul>
-                    <li>PHP  <progress value="50" max="100"></progress></li>
-                    <li>Database  <progress value="50" max="100"></progress></li>
+                    <li>PHP  <progress value="80" max="100"></progress></li>
+                    <li>Database  <progress value="80" max="100"></progress></li>
                 </ul>
             </div>
         </div>
@@ -62,6 +62,11 @@
 
     <section id="services">
         <h2>Services</h2>
+        <ul>
+            <li>Web design</li>
+            <li>mobile apps</li>
+            <li>UX | Ui</li>
+        </ul>
     </section>
 
     <section id="contact">
