add form submit button

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             <input type="email" name="" id="email">
             <br>
             <textarea name="" id="" cols="30" rows="10"></textarea>
+            <br>
+            <input type="submit" value="Send">
         </form>
 
 
