fix text area size

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 
     <section id="services">
         <h2>Services</h2>
+
+        <h3>Services Provided</h3>
         <ul>
             <li>Web design</li>
             <li>mobile apps</li>
