make page responsive & style some sections & adding color animation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <img src="images/plain.png" alt="">
-        <ul>
+        <ul class="glow">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
@@ -82,7 +82,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-
+        <h3>Get in touch</h3>
         <form>
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your first name..">
@@ -94,12 +94,22 @@
             <button>Send Message</button>
         </form>
 
+        <h3>Social Media</h3>
+        <ul class="glow">
+            <li><a href="#">Facebook <i class="fab fa-facebook"></i></a></li>
+            <li><a href="#">Facebook <i class="fab fa-twitter"></i></a></li>
+            <li><a href="#">Facebook <i class="fab fa-github"></i></a></li>
+            <li><a href="#">Facebook <i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="#">Facebook <i class="fab fa-telegram"></i></a></li>
+            <li><a href="#">Facebook <i class="fab fa-instagram"></i></a></li>
+            <li><a href="#">Facebook <i class="fab fa-snapchat"></i></a></li>
+            <li><a href="#">Facebook <i class="fab fa-instagram"></i></a></li>
 
-        <p><a href="#">Facebook <i class="fab fa-facebook"></i></a></p>
+        </ul>
     </section>
 
     <footer>
-        <p>Copyright ©2022 All rights reserved</p>
+        <p>Copyright &copy; 2022 All rights reserved</p>
         <p>This portfolio is made by Abdullah Baaboud</p>
     </footer>
 </body>
