--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
 
     <section id="services">
         <h2>Services</h2>
-
         <h3>Services Provided</h3>
         <ul>
             <li>Web design</li>
             <li>mobile apps</li>
             <li>UX | Ui</li>
         </ul>
+        <h3>Services Provided</h3>
+        <div></div>
     </section>
 
     <section id="contact">
@@ -97,13 +98,12 @@
         <h3>Social Media</h3>
         <ul class="glow">
             <li><a href="#">Facebook <i class="fab fa-facebook"></i></a></li>
-            <li><a href="#">Facebook <i class="fab fa-twitter"></i></a></li>
-            <li><a href="#">Facebook <i class="fab fa-github"></i></a></li>
-            <li><a href="#">Facebook <i class="fab fa-whatsapp"></i></a></li>
-            <li><a href="#">Facebook <i class="fab fa-telegram"></i></a></li>
-            <li><a href="#">Facebook <i class="fab fa-instagram"></i></a></li>
-            <li><a href="#">Facebook <i class="fab fa-snapchat"></i></a></li>
-            <li><a href="#">Facebook <i class="fab fa-instagram"></i></a></li>
+            <li><a href="#">Twitter <i class="fab fa-twitter"></i></a></li>
+            <li><a href="#">Github <i class="fab fa-github"></i></a></li>
+            <li><a href="#">Whatsapp <i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="#">Telegram <i class="fab fa-telegram"></i></a></li>
+            <li><a href="#">Instagram <i class="fab fa-instagram"></i></a></li>
+            <li><a href="#">Snapchat <i class="fab fa-snapchat"></i></a></li>
 
         </ul>
     </section>
