add loading animation

--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
             <li>mobile apps</li>
             <li>UX | Ui</li>
         </ul>
-        <h3>Services Provided</h3>
-        <div></div>
+        <h3>Previous Work</h3>
+        <div class="ring">Loading
+            <span></span>
+        </div>
     </section>
 
     <section id="contact">
