center loading ring

--- a/index.html
+++ b/index.html
@@ -55,14 +55,16 @@
                     <img class="skill_logo" src="images/12.png" alt="">
                 </div>
             </div>
-    
+
             <div>
                 <h3>My Experince</h3>
                 <ul>
                     <li>Participation in the Full stack bootcamp of Coding Academy 2022</li>
-                    <li>Participation in the scientific exhibition of the Department of Computer Engineering for the year
+                    <li>Participation in the scientific exhibition of the Department of Computer Engineering for the
+                        year
                         2019</li>
-                    <li>Participation in the scientific exhibition of the Department of Computer Engineering for the year
+                    <li>Participation in the scientific exhibition of the Department of Computer Engineering for the
+                        year
                         2017</li>
                 </ul>
             </div>
