alter dark mode

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <nav id="nav">
         <img src="images/plain.png" alt="">
         <ul class="glow">
-            <li><a id="link1" href="#home" class="dark_link">Home</a></li>
-            <li><a id="link2" href="#about" class="dark_link">About</a></li>
-            <li><a id="link3" href="#services" class="dark_link">Services</a></li>
-            <li><a id="link4" href="#contact" class="dark_link">Contact</a></li>
+            <li><a href="#home" class="dark_link">Home</a></li>
+            <li><a href="#about" class="dark_link">About</a></li>
+            <li><a href="#services" class="dark_link">Services</a></li>
+            <li><a href="#contact" class="dark_link">Contact</a></li>
         </ul>
         <button onclick="darkFunction()"><i class="fas fa-toggle-off" id="switcher"></i><p>Dark Mode</p></button>
     </nav>
